[workspace]

members = [
    # book
    "list-list-and-more-list",
    # video
    "getting-to-grips-with-rust-and-its-syntax",
    "algorithm-complexity-and-sorting-algorithms",
    "building-linked-lists-and-binary-trees",
    "model-real-situations-as-graphs-of-connected-nodes",
    "getting-constant-time-data-access-using-hash-map",
]
