[package]
name = "persistent-storage-data-structure"
version = "0.1.0"
authors = ["James Hagans <jhagans@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
serde_derive = "1.0.114"

bincode = "1.3.1"

failure = "0.1.8"
failure_derive = "0.1.8"

rand = "0.7.3"

getting-constant-time-data-access-using-hash-map= {path="../getting-constant-time-data-access-using-hash-map/"}